assets/css/style.css
*{
    box-sizing: border-box;
}

/*Styling for main elements of game, including resizing, coloring, 
adding borders, margins, padding and formatting sections. New items that I learned 
and gained practice on were overflow:auto, display:flex, creating divs to hold and 
position elements,and making sure that everything looked ok at various sizes.*/

body{
    background-color: rgb(217, 226, 235);
}

nav{
    background: rgb(109, 173, 211);
    padding: 20px;
    border-bottom: 5px lightcyan solid;
    width: 890px;
    color: rgb(237, 245, 253);
    font-size: 40px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    overflow: auto;
}

section{
    display: flex;
    justify-content: center;
}

div{
    border: 5px rgb(109, 173, 211) solid;
}

#game{
    margin: 30px;
    line-height: 36px;
    font-size: 20px;
    letter-spacing: .04em;
    text-align: center;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    width: 675px;
    background-color: rgb(237, 245, 253);
}

h2{
    font-weight: bold;
    letter-spacing: .1em;
    font-size: 36px;
    text-shadow: 2px 2px lightcyan;
    background-color: lightsteelblue;
    padding: 15px;
    border-bottom: 3px lightcyan solid;
}

#footerWrap {
    width:100%;
    position:fixed;
    bottom: 0px;
    background-color: rgb(217, 226, 235);
    border:0;
}

footer {
    margin: auto;
    width: 890px;
    height: 40px;
    text-align: center;
    color: rgb(109, 173, 211);
     
}
#footerContent{
    float:left;
    width: 890px;
    height: 50px;
    background-color:rgb(109, 173, 211);
    padding:0;
    border-top: 5px lightcyan solid;
}


    

